<resources>
    <string name="app_name">CommondSDK</string>
    <string name="quite_app">退出</string>
    <string name="start_take_pic">开始拍摄身份证</string>
    <string name="main_title">Orc身份证识别</string>
    <string name="result_title">身份证</string>

    <string name="act_result_title">"证件识别结果"</string>

    <string name="act_main_title">"身份证件照"</string>


    <string name="radio_front">正面</string>
    <string name="use_pic">使用该图</string>
    <string name="take_pic_again">重新拍摄</string>
    <string name="navigation_back">返回</string>
    <string name="take_pic">拍照</string>
    <string name="preview_images">预览</string>
    <string name="id_card_front_text">"请将身份证人像面影像保持\n在虚线框中，注意不要遮挡"</string>
    <string name="id_card_back_text">"请将身份证国徽面影像保持\n在虚线框中，注意不要遮挡"</string>
    <string name="analysis_with_camerax">PrewView With CameraX</string>
    <string name="analysis_with_camera2">PrewView With Camera2</string>

</resources>